name:                cardano-wallet-core
version:             2021.1.12
synopsis:            The Wallet Backend for a Cardano node.
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
extra-source-files:  specifications/api/swagger.yaml
cabal-version:       >=1.10

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      aeson
    , async
    , base
    , bech32
    , bech32-th
    , binary
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-crypto
    , cardano-slotting
    , cborg
    , containers
    , contra-tracer
    , cryptonite
    , data-default
    , deepseq
    , digest
    , directory
    , either
    , errors
    , exceptions
    , extra
    , fast-logger
    , file-embed
    , filepath
    , fmt
    , foldl
    , generic-lens >=1.1.0.0 && < 1.2.0.0
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , io-sim-classes
    , iohk-monitoring
    , lattices
    , memory
    , monad-logger
    , mtl
    , network
    , network-uri
    , ntp-client
    , OddWord
    , ouroboros-consensus
    , ouroboros-network
    , path-pieces
    , persistent
    , persistent-sqlite
    , persistent-template
    , quiet
    , random
    , random-shuffle
    , retry
    , safe
    , scientific
    , scrypt
    , servant
    , servant-client
    , servant-server
    , split
    , statistics
    , streaming-commons
    , strict-non-empty-containers
    , string-interpolate
    , template-haskell
    , text
    , text-class
    , time
    , tls
    , tracer-transformers
    , transformers
    , typed-protocols
    , unliftio
    , unliftio-core
    , unordered-containers
    , vector
    , wai
    , warp
    , warp-tls
    , x509
    , x509-store
    , x509-validation
    , Win32-network
    -- TODO:
    --
    -- Move all test-related code out of the main library and into a dedicated
    -- testing library.
    --
    -- The following imports are currently necessary to define generators and
    -- shrinkers that can be imported by both the `cardano-wallet-core` and
    -- `cardano-wallet` libraries:
    --
    , QuickCheck
    , cardano-wallet-test-utils
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Byron.Codec.Cbor
      Cardano.DB.Sqlite
      Cardano.DB.Sqlite.Delete
      Cardano.Pool.DB
      Cardano.Pool.DB.Log
      Cardano.Pool.DB.MVar
      Cardano.Pool.DB.Model
      Cardano.Pool.DB.Sqlite
      Cardano.Pool.DB.Sqlite.TH
      Cardano.Pool.Metadata
      Cardano.Wallet
      Cardano.Wallet.Api
      Cardano.Wallet.Api.Client
      Cardano.Wallet.Api.Link
      Cardano.Wallet.Api.Server
      Cardano.Wallet.Api.Server.Tls
      Cardano.Wallet.Api.Types
      Cardano.Wallet.DB
      Cardano.Wallet.DB.MVar
      Cardano.Wallet.DB.Model
      Cardano.Wallet.DB.Sqlite
      Cardano.Wallet.DB.Sqlite.TH
      Cardano.Wallet.DB.Sqlite.Types
      Cardano.Wallet.Logging
      Cardano.Wallet.Network
      Cardano.Wallet.Network.BlockHeaders
      Cardano.Wallet.Network.Ports
      Cardano.Wallet.Orphans
      Cardano.Wallet.Primitive.AddressDerivation
      Cardano.Wallet.Primitive.AddressDerivation.Byron
      Cardano.Wallet.Primitive.AddressDerivation.Icarus
      Cardano.Wallet.Primitive.AddressDerivation.Shelley
      Cardano.Wallet.Primitive.AddressDiscovery
      Cardano.Wallet.Primitive.Slotting
      Cardano.Wallet.Primitive.AddressDiscovery.Random
      Cardano.Wallet.Primitive.AddressDiscovery.Sequential
      Cardano.Wallet.Primitive.CoinSelection
      Cardano.Wallet.Primitive.SyncProgress
      Cardano.Wallet.Primitive.CoinSelection.LargestFirst
      Cardano.Wallet.Primitive.CoinSelection.Migration
      Cardano.Wallet.Primitive.CoinSelection.Random
      Cardano.Wallet.Primitive.Fee
      Cardano.Wallet.Primitive.Model
      Cardano.Wallet.Primitive.Scripts
      Cardano.Wallet.Primitive.Types
      Cardano.Wallet.Primitive.Types.Address
      Cardano.Wallet.Primitive.Types.Coin
      Cardano.Wallet.Primitive.Types.Hash
      Cardano.Wallet.Primitive.Types.RewardAccount
      Cardano.Wallet.Primitive.Types.TokenBundle
      Cardano.Wallet.Primitive.Types.TokenMap
      Cardano.Wallet.Primitive.Types.TokenPolicy
      Cardano.Wallet.Primitive.Types.TokenQuantity
      Cardano.Wallet.Primitive.Types.Tx
      Cardano.Wallet.Primitive.Types.UTxO
      Cardano.Wallet.Registry
      Cardano.Wallet.Transaction
      Cardano.Wallet.Unsafe
      Cardano.Wallet.Version
      Cardano.Wallet.Version.TH
      Crypto.Hash.Utils
      Data.Binary.Get.Safe
      Data.Function.Utils
      Data.Time.Text
      Data.Time.Utils
      Data.Quantity
      Data.Vector.Shuffle
      Network.Ntp
      Network.Wai.Middleware.ServerError
      Network.Wai.Middleware.Logging
      Ouroboros.Network.Client.Wallet
      UnliftIO.Compat
        -- TODO:
        --
        -- Move all test-related code out of the main library and into a
        -- dedicated testing library.
        --
        -- The following modules define QC generators and shrinkers that can
        -- be used by both `cardano-wallet-core` and `cardano-wallet`:
        --
      Cardano.Wallet.Primitive.Types.Address.Gen
      Cardano.Wallet.Primitive.Types.Coin.Gen
      Cardano.Wallet.Primitive.Types.TokenBundle.Gen
      Cardano.Wallet.Primitive.Types.TokenMap.Gen
      Cardano.Wallet.Primitive.Types.TokenPolicy.Gen
      Cardano.Wallet.Primitive.Types.TokenQuantity.Gen
  other-modules:
      Paths_cardano_wallet_core

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      "-with-rtsopts=-M2G"
      "-with-rtsopts=-N4"
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , aeson
    , aeson-qq
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-crypto
    , cardano-wallet-core
    , cardano-wallet-launcher
    , cardano-wallet-test-utils
    , cardano-slotting
    , cborg
    , connection
    , containers
    , contra-tracer
    , cryptonite
    , data-default
    , directory
    , deepseq
    , extra >= 1.6.17
    , file-embed
    , filepath
    , fmt
    , foldl
    , generic-arbitrary
    , generic-lens
    , hspec
    , hspec-core
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , iohk-monitoring
    , lens
    , memory
    , network
    , network-uri
    , persistent
    , regex-pcre-builtin
    , OddWord
    , ouroboros-consensus
    , QuickCheck
    , quickcheck-classes
    , quickcheck-state-machine >= 0.6.0
    , random
    , retry
    , safe
    , scrypt
    , servant
    , servant-server
    , should-not-typecheck
    , strict-non-empty-containers
    , openapi3 >= 3.0.0.1
    , servant-openapi3
    , string-qq
    , temporary
    , text
    , text-class
    , tls
    , time
    , transformers
    , tree-diff
    , unliftio
    , unordered-containers
    , x509
    , x509-store
    , yaml
    , wai
    , wai-extra
    , warp
  build-tools:
      hspec-discover
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
      test/shared
  main-is:
      Main.hs
  other-modules:
      Cardano.Byron.Codec.CborSpec
      Cardano.DB.Sqlite.DeleteSpec
      Cardano.Pool.DB.Arbitrary
      Cardano.Pool.DB.MVarSpec
      Cardano.Pool.DB.Properties
      Cardano.Pool.DB.SqliteSpec
      Cardano.Wallet.Api.Malformed
      Cardano.Wallet.Api.Server.TlsSpec
      Cardano.Wallet.Api.ServerSpec
      Cardano.Wallet.Api.TypesSpec
      Cardano.Wallet.ApiSpec
      Cardano.Wallet.DB.Arbitrary
      Cardano.Wallet.DB.MVarSpec
      Cardano.Wallet.DB.Properties
      Cardano.Wallet.DB.SqliteSpec
      Cardano.Wallet.DB.Sqlite.TypesSpec
      Cardano.Wallet.DB.StateMachine
      Cardano.Wallet.DummyTarget.Primitive.Types
      Cardano.Wallet.Gen
      Cardano.Wallet.Network.BlockHeadersSpec
      Cardano.Wallet.Network.PortsSpec
      Cardano.Wallet.NetworkSpec
      Cardano.Wallet.Primitive.AddressDerivation.ByronSpec
      Cardano.Wallet.Primitive.AddressDerivation.IcarusSpec
      Cardano.Wallet.Primitive.AddressDerivationSpec
      Cardano.Wallet.Primitive.AddressDiscovery.RandomSpec
      Cardano.Wallet.Primitive.AddressDiscovery.SequentialSpec
      Cardano.Wallet.Primitive.AddressDiscoverySpec
      Cardano.Wallet.Primitive.CoinSelection.LargestFirstSpec
      Cardano.Wallet.Primitive.CoinSelection.MigrationSpec
      Cardano.Wallet.Primitive.CoinSelection.RandomSpec
      Cardano.Wallet.Primitive.CoinSelectionSpec
      Cardano.Wallet.Primitive.FeeSpec
      Cardano.Wallet.Primitive.ModelSpec
      Cardano.Wallet.Primitive.ScriptsSpec
      Cardano.Wallet.Primitive.Slotting.Legacy
      Cardano.Wallet.Primitive.SlottingSpec
      Cardano.Wallet.Primitive.SyncProgressSpec
      Cardano.Wallet.Primitive.Types.HashSpec
      Cardano.Wallet.Primitive.Types.TokenBundleSpec
      Cardano.Wallet.Primitive.Types.TokenMapSpec
      Cardano.Wallet.Primitive.Types.TokenMapSpec.TypeErrorSpec
      Cardano.Wallet.Primitive.Types.TokenQuantitySpec
      Cardano.Wallet.Primitive.TypesSpec
      Cardano.Wallet.RegistrySpec
      Cardano.Wallet.TransactionSpec
      Cardano.WalletSpec
      Data.Function.UtilsSpec
      Data.QuantitySpec
      Data.Time.TextSpec
      Data.Time.UtilsSpec
      Data.Vector.ShuffleSpec
      Network.Wai.Middleware.LoggingSpec
      Spec

benchmark db
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , bytestring
    , cardano-addresses
    , cardano-crypto
    , cardano-wallet-core
    , cardano-wallet-launcher
    , containers
    , criterion
    , cryptonite
    , deepseq
    , directory
    , filepath
    , fmt
    , iohk-monitoring
    , memory
    , persistent-sqlite
    , random
    , temporary
    , text
    , text-class
    , time
    , transformers
    , unliftio
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/bench/db
      test/shared
  main-is:
      Main.hs
  other-modules:
      Cardano.Wallet.DummyTarget.Primitive.Types
