cabal-version:       3.0
name:                cardano-wallet-core
version:             2022.1.18
synopsis:            The Wallet Backend for a Cardano node.
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2021 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
extra-source-files:  specifications/api/swagger.yaml

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wunused-packages

  if (flag(release))
    ghc-options:       -O2 -Werror

  build-depends: base >= 4.14 && < 4.15

common exe
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

library
  import: project-config
  build-depends:
      aeson
    , bech32
    , bech32-th
    , binary
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-binary
    , cardano-crypto
    , cardano-wallet-base
    , cardano-wallet-numeric
    , cardano-slotting
    , cborg
    , containers
    , contra-tracer
    , cryptonite
    , data-default
    , dbvar
    , deepseq
    , digest
    , directory
    , either
    , errors
    , exact-combinatorics
    , exceptions
    , extra
    , fast-logger
    , file-embed
    , filepath
    , fmt
    , foldl
    , generic-lens
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , int-cast
    , io-classes
    , iohk-monitoring
    , lattices
    , math-functions
    , memory
    , MonadRandom
    , monad-logger
    , network
    , network-uri
    , nothunks
    , ntp-client
    , OddWord
    , ouroboros-consensus
    , ouroboros-network
    , path-pieces
    , persistent >=2.13 && <2.14
    , persistent-sqlite >=2.13 && <2.14
    , pretty-simple
    , quiet
    , random
    , random-shuffle
    , resource-pool
    , retry
    , safe
    , scientific
    , scrypt
    , servant
    , servant-client
    , servant-server
    , split
    , splitmix
    , statistics
    , stm
    , streaming-commons
    , strict-non-empty-containers
    , strict-stm
    , string-interpolate
    , template-haskell
    , text
    , cardano-wallet-text-class
    , time
    , tls
    , tracer-transformers
    , transformers
    , typed-protocols
    , unliftio
    , unliftio-core
    , unordered-containers
    , vector
    , wai
    , warp
    , warp-tls
    , wide-word
    , x509
    , x509-store
    , x509-validation
    , Win32-network
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Byron.Codec.Cbor
      Cardano.DB.Sqlite
      Cardano.DB.Sqlite.Delete
      Cardano.Pool.DB
      Cardano.Pool.DB.Log
      Cardano.Pool.DB.MVar
      Cardano.Pool.DB.Model
      Cardano.Pool.DB.Sqlite
      Cardano.Pool.DB.Sqlite.TH
      Cardano.Pool.Metadata
      Cardano.Wallet
      Cardano.Wallet.Address.Pool
      Cardano.Wallet.Api
      Cardano.Wallet.Api.Client
      Cardano.Wallet.Api.Link
      Cardano.Wallet.Api.Server
      Cardano.Wallet.Api.Server.Tls
      Cardano.Wallet.Api.Types
      Cardano.Wallet.DB
      Cardano.Wallet.DB.Checkpoints
      Cardano.Wallet.DB.MVar
      Cardano.Wallet.DB.Model
      Cardano.Wallet.DB.Sqlite
      Cardano.Wallet.DB.Sqlite.AddressBook
      Cardano.Wallet.DB.Sqlite.CheckpointsOld
      Cardano.Wallet.DB.Sqlite.Migration
      Cardano.Wallet.DB.Sqlite.TH
      Cardano.Wallet.DB.Sqlite.Types
      Cardano.Wallet.Logging
      Cardano.Wallet.Network
      Cardano.Wallet.Network.Client
      Cardano.Wallet.Network.Ports
      Cardano.Wallet.Orphans
      Cardano.Wallet.TokenMetadata
      Cardano.Wallet.Prelude
      Cardano.Wallet.Primitive.AddressDerivation
      Cardano.Wallet.Primitive.AddressDerivation.Byron
      Cardano.Wallet.Primitive.AddressDerivation.Icarus
      Cardano.Wallet.Primitive.AddressDerivation.MintBurn
      Cardano.Wallet.Primitive.AddressDerivation.Shared
      Cardano.Wallet.Primitive.AddressDerivation.SharedKey
      Cardano.Wallet.Primitive.AddressDerivation.Shelley
      Cardano.Wallet.Primitive.AddressDiscovery
      Cardano.Wallet.Primitive.Slotting
      Cardano.Wallet.Primitive.AddressDiscovery.Random
      Cardano.Wallet.Primitive.Delegation.State
      Cardano.Wallet.Primitive.AddressDiscovery.Sequential
      Cardano.Wallet.Primitive.AddressDiscovery.Shared
      Cardano.Wallet.Primitive.SyncProgress
      Cardano.Wallet.Primitive.CoinSelection
      Cardano.Wallet.Primitive.CoinSelection.Balance
      Cardano.Wallet.Primitive.CoinSelection.Collateral
      Cardano.Wallet.Primitive.Collateral
      Cardano.Wallet.Primitive.Delegation.UTxO
      Cardano.Wallet.Primitive.Migration
      Cardano.Wallet.Primitive.Migration.Planning
      Cardano.Wallet.Primitive.Migration.Selection
      Cardano.Wallet.Primitive.Model
      Cardano.Wallet.Primitive.Types
      Cardano.Wallet.Primitive.Types.Address
      Cardano.Wallet.Primitive.Types.Coin
      Cardano.Wallet.Primitive.Types.Hash
      Cardano.Wallet.Primitive.Types.Redeemer
      Cardano.Wallet.Primitive.Types.RewardAccount
      Cardano.Wallet.Primitive.Types.TokenBundle
      Cardano.Wallet.Primitive.Types.TokenMap
      Cardano.Wallet.Primitive.Types.TokenPolicy
      Cardano.Wallet.Primitive.Types.TokenQuantity
      Cardano.Wallet.Primitive.Types.Tx
      Cardano.Wallet.Primitive.Types.UTxO
      Cardano.Wallet.Primitive.Types.UTxOIndex
      Cardano.Wallet.Primitive.Types.UTxOIndex.Internal
      Cardano.Wallet.Primitive.Types.UTxOSelection
      Cardano.Wallet.Registry
      Cardano.Wallet.TokenMetadata.MockServer
      Cardano.Wallet.Transaction
      Cardano.Wallet.Unsafe
      Cardano.Wallet.Util
      Cardano.Wallet.Version
      Cardano.Wallet.Version.TH
      Control.Concurrent.Concierge
      Control.Monad.Random.Extra
      Crypto.Hash.Utils
      Data.Function.Utils
      Data.Quantity
      Data.Vector.Shuffle
      Network.Ntp
      Network.Wai.Middleware.ServerError
      Network.Wai.Middleware.Logging
  other-modules:
      Paths_cardano_wallet_core

library test-bench-shared
  import: project-config
  visibility: public
  build-depends:
      cardano-wallet-core
    , cardano-wallet-test-utils
    , cardano-wallet-text-class
    , QuickCheck
    , aeson
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-binary
    , cardano-crypto-class
    , cardano-crypto-test
    , cardano-ledger-byron-test
    , cardano-ledger-shelley
    , cardano-ledger-shelley-test
    , cardano-ledger-core
    , cborg
    , containers
    , extra
    , generic-arbitrary
    , generics-sop
    , hedgehog-quickcheck
    , memory
    , network
    , plutus-ledger-api
    , strict-containers
    , text
    , time
    , unordered-containers
  hs-source-dirs:
      test-common
  exposed-modules:
      Cardano.Wallet.DummyTarget.Primitive.Types
      Cardano.Wallet.Gen
      Cardano.Wallet.Primitive.CoinSelection.Balance.Gen
      Cardano.Wallet.Primitive.Types.Gen
      Cardano.Wallet.Primitive.Types.Address.Gen
      Cardano.Wallet.Primitive.Types.Coin.Gen
      Cardano.Wallet.Primitive.Types.RewardAccount.Gen
      Cardano.Wallet.Primitive.Types.TokenBundle.Gen
      Cardano.Wallet.Primitive.Types.TokenMap.Gen
      Cardano.Wallet.Primitive.Types.TokenPolicy.Gen
      Cardano.Wallet.Primitive.Types.TokenQuantity.Gen
      Cardano.Wallet.Primitive.Types.Tx.Gen
      Cardano.Wallet.Primitive.Types.UTxO.Gen
      Cardano.Wallet.Primitive.Types.UTxOIndex.Gen
      Cardano.Wallet.Primitive.Types.UTxOSelection.Gen
      -- TODO: Use cardano-api:gen to import these generators from cardano-api
      Cardano.Api.Gen

test-suite unit
  import: project-config, exe
  ghc-options:
      "-with-rtsopts=-M2G"
      "-with-rtsopts=-N4"
  build-depends:
      cardano-wallet-base
    , cardano-wallet-core:test-bench-shared
    , aeson
    , aeson-qq
    , base58-bytestring
    , binary
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-crypto
    , cardano-wallet-numeric
    , cardano-ledger-byron
    , cardano-ledger-byron-test
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-test
    , cardano-wallet-core
    , cardano-wallet-test-utils
    , cardano-wallet-text-class
    , cardano-sl-x509
    , cardano-slotting
    , cborg
    , connection
    , containers
    , contra-tracer
    , cryptonite
    , data-default
    , directory
    , deepseq
    , extra >= 1.6.17
    , file-embed
    , filepath
    , fmt
    , foldl
    , generic-arbitrary
    , generic-lens
    , generics-sop
    , hedgehog-quickcheck
    , hspec >= 2.8.2
    , hspec-core >= 2.8.2
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , int-cast
    , iohk-monitoring
    , io-classes
    , io-sim
    , lattices
    , lens
    , memory
    , MonadRandom
    , network
    , network-uri
    , nothunks
    , persistent
    , regex-pcre-builtin
    , OddWord
    , ouroboros-consensus
    , pretty-simple
    , QuickCheck
    , quickcheck-classes
    , quickcheck-state-machine >= 0.6.0
    , random
    , retry
    , safe
    , scrypt
    , servant
    , servant-server
    , should-not-typecheck
    , splitmix
    , strict-non-empty-containers
    , openapi3 >= 3.0.0.1 && < 3.2.0
    , plutus-ledger-api
    , servant-openapi3
    , string-qq
    , temporary
    , text
    , tls
    , time
    , transformers
    , tree-diff
    , unliftio
    , unliftio-core
    , unordered-containers
    , x509
    , x509-store
    , yaml
    , wai
    , wai-extra
    , warp
  build-tool-depends:
      hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
      test/data
  main-is:
      core-unit-test.hs
  other-modules:
      Cardano.Api.GenSpec
      Cardano.Byron.Codec.CborSpec
      Cardano.DB.Sqlite.DeleteSpec
      Cardano.Pool.DB.Arbitrary
      Cardano.Pool.DB.MVarSpec
      Cardano.Pool.DB.Properties
      Cardano.Pool.DB.SqliteSpec
      Cardano.Wallet.Address.PoolSpec
      Cardano.Wallet.Api.Malformed
      Cardano.Wallet.Api.Server.TlsSpec
      Cardano.Wallet.Api.ServerSpec
      Cardano.Wallet.Api.TypesSpec
      Cardano.Wallet.ApiSpec
      Cardano.Wallet.DB.Arbitrary
      Cardano.Wallet.DB.MVarSpec
      Cardano.Wallet.DB.Properties
      Cardano.Wallet.DB.SqliteSpec
      Cardano.Wallet.DB.Sqlite.TypesSpec
      Cardano.Wallet.DB.StateMachine
      Cardano.Wallet.Network.PortsSpec
      Cardano.Wallet.NetworkSpec
      Cardano.Wallet.Primitive.AddressDerivation.ByronSpec
      Cardano.Wallet.Primitive.AddressDerivation.IcarusSpec
      Cardano.Wallet.Primitive.AddressDerivation.MintBurnSpec
      Cardano.Wallet.Primitive.AddressDerivationSpec
      Cardano.Wallet.Primitive.AddressDiscovery.RandomSpec
      Cardano.Wallet.Primitive.AddressDiscovery.SequentialSpec
      Cardano.Wallet.Primitive.AddressDiscovery.SharedSpec
      Cardano.Wallet.Primitive.Delegation.StateSpec
      Cardano.Wallet.Primitive.AddressDiscoverySpec
      Cardano.Wallet.Primitive.CoinSelectionSpec
      Cardano.Wallet.Primitive.CoinSelection.BalanceSpec
      Cardano.Wallet.Primitive.CoinSelection.CollateralSpec
      Cardano.Wallet.Primitive.CollateralSpec
      Cardano.Wallet.Primitive.MigrationSpec
      Cardano.Wallet.Primitive.Migration.PlanningSpec
      Cardano.Wallet.Primitive.Migration.SelectionSpec
      Cardano.Wallet.Primitive.ModelSpec
      Cardano.Wallet.Primitive.Slotting.Legacy
      Cardano.Wallet.Primitive.SlottingSpec
      Cardano.Wallet.Primitive.SyncProgressSpec
      Cardano.Wallet.Primitive.Types.AddressSpec
      Cardano.Wallet.Primitive.Types.CoinSpec
      Cardano.Wallet.Primitive.Types.HashSpec
      Cardano.Wallet.Primitive.Types.TokenBundleSpec
      Cardano.Wallet.Primitive.Types.TokenMapSpec
      Cardano.Wallet.Primitive.Types.TokenMapSpec.TypeErrorSpec
      Cardano.Wallet.Primitive.Types.TokenPolicySpec
      Cardano.Wallet.Primitive.Types.TokenQuantitySpec
      Cardano.Wallet.Primitive.Types.TxSpec
      Cardano.Wallet.Primitive.Types.UTxOSpec
      Cardano.Wallet.Primitive.Types.UTxOIndexSpec
      Cardano.Wallet.Primitive.Types.UTxOIndex.TypeErrorSpec
      Cardano.Wallet.Primitive.Types.UTxOSelectionSpec
      Cardano.Wallet.Primitive.Types.UTxOSelectionSpec.TypeErrorSpec
      Cardano.Wallet.Primitive.TypesSpec
      Cardano.Wallet.TokenMetadataSpec
      Cardano.Wallet.RegistrySpec
      Cardano.WalletSpec
      Control.Concurrent.ConciergeSpec
      Control.Monad.Random.ExtraSpec
      Data.Function.UtilsSpec
      Data.QuantitySpec
      Data.Vector.ShuffleSpec
      Network.Wai.Middleware.LoggingSpec
      Spec

benchmark db
  import: project-config, exe
  build-depends:
      cardano-wallet-base
    , cardano-wallet-core:test-bench-shared
    , bytestring
    , cardano-addresses
    , cardano-crypto
    , cardano-wallet-core
    , cardano-wallet-test-utils
    , containers
    , contra-tracer
    , criterion
    , cryptonite
    , deepseq
    , directory
    , filepath
    , fmt
    , iohk-monitoring
    , memory
    , random
    , text
    , cardano-wallet-text-class
    , time
    , transformers
    , unliftio
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is:
      db-bench.hs
