cabal-version: 3.0
name:          crypto-primitives
version:       0.1.0.0
synopsis:      Cryptographic primitives
license:       Apache-2.0
author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    NoImplicitPrelude
    OverloadedStrings

common opts-exe
  ghc-options: -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:             language
  default-language:   Haskell2010
  ghc-options:
    -O2 -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -Wcompat -Widentities
    -Werror=incomplete-patterns -Wredundant-constraints
    -Wpartial-fields -Wtabs -fhelpful-errors -fprint-expanded-synonyms
    -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
    -freverse-errors

  hs-source-dirs:     src
  exposed-modules:    Cryptography.Cipher.ChaChaPoly1305
                      Cryptography.Cipher.AES256CBC
                      Cryptography.Core
                      Cryptography.ECC.Edwards25519
                      Cryptography.Hash.Blake
                      Cryptography.Hash.Core
                      Cryptography.KDF.PBKDF2
                      Cryptography.KDF.Scrypt
                      Cryptography.Format.PKCS7
  build-depends:
    , base                    >= 4.14.3 && < 4.19
    , bytestring              >= 0.10.12 && < 0.13
    , cryptonite              ^>=0.30
    , either
    , extra
    , memory                  ^>=0.18
    , monoid-subclasses

test-suite test
  import:             language, opts-exe
  ghc-options:        -with-rtsopts=-M2G -with-rtsopts=-N4
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            run-test-suite.hs
  build-depends:
    , base
    , bytestring
    , cardano-wallet-test-utils
    , containers
    , crypto-primitives
    , either
    , hspec
    , memory
    , monoid-subclasses
    , QuickCheck
    , text
    , with-utf8
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Cryptography.Cipher.AES256CBCSpec
    Cryptography.KDF.PBKDF2Spec
    Cryptography.Format.PKCS7Spec
    Spec
    SpecHook
